updated the html page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>Docusarus Workflow Map (Viewer)</title>
+    <title>Docusaurus Workflow Map</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
       <!-- Left: Map -->
       <section class="pane pane--map">
         <div class="map-header">
-          <h1 class="app-title">Docusarus Workflow Map</h1>
+          <h1 class="app-title">Docusaurus Workflow Map</h1>
           <div class="map-actions">
             <!-- Zoom controls (left) -->
             <button id="zoomOutBtn" class="btn btn--ghost" title="Zoom out">−</button>
