updated the files

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               Collapse All
             </button>
             <button id="zoomResetBtn" class="btn btn--ghost" title="Reset zoom">
-              100%
+              Fit
             </button>
             <span class="sep"></span>
             <button
