updated doc file name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
-    <title>Docusaurus Workflow Map</title>
+    <title>DocStructure</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
       <!-- Left: Map -->
       <section class="pane pane--map">
         <div class="map-header">
-          <h1 class="app-title">Docusaurus Workflow Map</h1>
+          <h1 class="app-title">DocStructure</h1>
           <div class="map-actions">
             <button id="zoomOutBtn" class="btn btn--ghost" title="Zoom out">
               −
